<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/botonEmpezar"
    android:background="@drawable/imgfondoandroid"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bntJugar"
        android:layout_width="193dp"
        android:layout_height="63dp"
        android:background="@drawable/botonempezar"
        android:fontFamily="@font/permanent_marker"
        android:onClick="empezarJuego"
        android:text="@string/botonEmpezar"
        android:textColor="@color/letras"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.819"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/TextoNombreAplicacion"
        android:layout_width="308dp"
        android:layout_height="157dp"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/letras"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/bntJugar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/botonAjustes"
        android:layout_width="64dp"
        android:layout_height="66dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/descriptorBotonEmpezar"
        android:onClick="ajustar"
        app:layout_constraintBottom_toTopOf="@+id/TextoNombreAplicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225"
        app:srcCompat="@drawable/ic_action_settings"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,ImageContrastCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_marginStart="-2dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginBottom="-2dp"
        android:background="@drawable/barramenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:contentDescription="Tienda"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageButton8"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_action_shopping_basket"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="61dp"
            android:layout_height="54dp"
            android:background="#00FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageButton8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_action_format_list_numbered"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
            android:contentDescription="TODO" />

        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_action_play_circle_outline"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
            android:contentDescription="TODO" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>